// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Avatar <Avatar /> renders in correct sizes 1`] = `
.c0 {
  color: white;
  background-color: indigo05;
  width: 24px;
  height: 24px;
  border-radius: 24px;
}

<span
  class="c0"
>
  <span
    class="Text-sc-1e9atua-0"
  >
    ??
  </span>
</span>
`;

exports[`components/Avatar <Avatar /> renders on large size by default 1`] = `
.c0 {
  color: white;
  background-color: indigo05;
  width: 40px;
  height: 40px;
  border-radius: 40px;
}

<span
  class="c0"
>
  <span
    class="Text-sc-1e9atua-0"
  >
    ??
  </span>
</span>
`;
